# FP-lab-2

./: .ocamlformat  .zanuda  README.md  dune-project  fp_lab_2.opam
.github/workflows/: main.yml
src/: dune  prefixes.ml  presets.ml  trie.ml  trie.mli  utils.ml
test/: dune  main.ml  pbtests.ml  unittests.ml
