(executable
 (name main)
 (public_name fp_lab_2)
 (libraries fp_lab_2 sexplib)
 (preprocess
  (pps
   ppx_inline_test
   ppx_assert
   ppx_jane
   ppx_sexp_conv
   ppx_deriving.ord
   ppx_deriving.eq))
 (modules main))

; (executable
;  (name unittests)
;  (public_name unittests)
;  (modes exe)
;  (modules unittests testing)
;  (libraries alcotest fp_lab_2))

; (executable
;  (name pbtests)
;  (public_name pbtests)
;  (modes exe)
;  (modules pbtests testing)
;  (libraries fp_lab_2))

(library
 (name pbtests)
 (libraries fp_lab_2 core sexplib)
 (preprocess
  (pps
   ppx_inline_test
   ppx_assert
   ppx_jane
   ppx_sexp_conv
   ppx_deriving.ord
   ppx_deriving.eq))
 (inline_tests)
 (modules pbtests))

; (rule
;  (alias runtest)
;  (action
;   (run %{dep:unittests.exe})))

; (rule
;  (alias runtest)
;  (action
;   (run %{dep:pbtests.exe})))
